# lol-ai-project

./: .gitignore  .vercelignore  README.md  docker-compose.yml  next.config.ts  package.json  pyproject.toml  pyrightconfig.json  render.yaml  requirements.txt  vercel.json
.github/workflows/: update-riot-key.yml
backend/: analyzer.py  async_riot_api.py  cache_manager.py  main.py  requirements.txt  riot_api.py  test.py
backend/docs/: DEPLOY-BACKEND.md  REDIS-WINDOWS.md
backend/scripts/: start-redis.ps1
frontend/: VERCEL-DEPLOY.md  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: ClientLayout.tsx  layout.tsx  page.tsx
frontend/src/app/api/analyze-user/[riotId]/: route.ts
frontend/src/app/components/: ThemeProvider.tsx  ThemeToggleButton.tsx
frontend/src/app/current-game/: page.tsx
src/app/: page.tsx
src/app/api/health/: route.ts
